# valapad

./: .gitignore  README.md  com.github.hugmouse.valapad.yml  dev.mysh.valapad.yml  meson.build
.github/workflows/: flatpak.yml  release.yml
data/: com.github.hugmouse.valapad.desktop.in  com.github.hugmouse.valapad.gschema.xml  com.github.hugmouse.valapad.metainfo.xml.in  dev.mysh.valapad.desktop.in  dev.mysh.valapad.gschema.xml  dev.mysh.valapad.metainfo.xml.in  meson.build
po/: POTFILES  com.github.hugmouse.valapad.pot  de.po  dev.mysh.valapad.pot  meson.build  ru.po
po/extra/: POTFILES  com.github.hugmouse.valapad-extra.pot  de.po  dev.mysh.valapad-extra.pot  meson.build  ru.po
scripts/: validate-release.py
src/: Application.vala  MainWindow.vala  TextFileDecoder.vala  config.vala.in  meson.build
src/Dialogs/: FontDialog.vala  FontFilter.vala  GoToDialog.vala
src/Widgets/: FindBar.vala  WordWrapController.vala
tests/: TextFileDecoderTest.vala  meson.build
